--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">UniRide</string>
+    <string name="text_init">Ingresar</string>
+    <string name="no_account">¿No tienes cuenta?</string>
+    <string name="register">registrate</string>
 </resources>
